--- a/themes/hugo-lithium-theme/static/css/fonts.css
+++ b/themes/hugo-lithium-theme/static/css/fonts.css
@@ -1,11 +1,11 @@
-@font-face {
-  font-family: 'Merriweather';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Merriweather'), local('Merriweather-Regular'),
-       url('../fonts/merriweather-v13-latin-regular.woff2') format('woff2'),
-       url('../fonts/merriweather-v13-latin-regular.woff') format('woff');
-}
+/* @font-face { */
+  /* font-family: 'Merriweather'; */
+  /* font-style: normal; */
+  /* font-weight: 400; */
+  /* src: local('Merriweather'), local('Merriweather-Regular'), */
+       /* url('../fonts/merriweather-v13-latin-regular.woff2') format('woff2'), */
+       /* url('../fonts/merriweather-v13-latin-regular.woff') format('woff'); */
+/* } */
 @font-face {
   font-family: 'Lato';
   font-style: normal;
@@ -13,6 +13,15 @@
   src: local('Lato Regular'), local('Lato-Regular'),
        url('../fonts/lato-v11-latin-regular.woff2') format('woff2'),
        url('../fonts/lato-v11-latin-regular.woff') format('woff');
+}
+/* merriweather-regular - latin_latin-ext */
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Merriweather'), local('Merriweather-Regular'),
+       url('../fonts/merriweather-v15-latin_latin-ext-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/merriweather-v15-latin_latin-ext-regular.woff') format('woff'), /* Modern Browsers */
 }
 body {
   font-family: 'Merriweather', serif;
